--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,50 @@
 ---
 language: bash
-env:
-  - SRC=prometheus/prometheus        DST=cloudalchemy/ansible-prometheus
-  - SRC=prometheus/alertmanager      DST=cloudalchemy/ansible-alertmanager
-  - SRC=prometheus/node_exporter     DST=cloudalchemy/ansible-node-exporter
-  - SRC=prometheus/blackbox_exporter DST=cloudalchemy/ansible-blackbox-exporter
-  - SRC=prometheus/mysqld_exporter   DST=cloudalchemy/ansible-mysqld-exporter
-  - SRC=prometheus/snmp_exporter     DST=cloudalchemy/ansible-snmp-exporter
-  - SRC=prometheus/pushgateway       DST=cloudalchemy/ansible-pushgateway
 
-script:
-  - bash autocommiter.sh
-branches:
-  only:
-    - master
+stages:
+- name: files
+  if: branch = master AND type != pull_request
+- name: versions
+  if: branch = master AND type != pull_request
+
+jobs:
+  include:
+    - stage: files
+      name: "Skeleton repo file sync"
+      script: bash sync_skeleton.sh
+    - stage: versions
+      name: "prometheus"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/prometheus
+        - DST=cloudalchemy/ansible-prometheus
+    - name: "alertmanager"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/alertmanager
+        - DST=cloudalchemy/ansible-alertmanager
+    - name: "node_exporter"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/node_exporter
+        - DST=cloudalchemy/ansible-node-exporter
+    - name: "blackbox_exporter"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/blackbox_exporter
+        - DST=cloudalchemy/ansible-blackbox-exporter
+    - name: "snmp_exporter"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/snmp_exporter
+        - DST=cloudalchemy/ansible-snmp-exporter
+    - name: "mysqld_exporter"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/mysqld_exporter
+        - DST=cloudalchemy/ansible-mysqld-exporter
+    - name: "pushgateway"
+      script: bash autocommiter.sh
+      env:
+        - SRC=prometheus/pushgateway
+        - DST=cloudalchemy/ansible-pushgateway
