--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -55,7 +55,10 @@ branches:
         strict: false
         # Required. The list of status checks to require in order to merge into this branch
         contexts:
-        - "WIP"
+        # - "WIP"
+        - "ci/circleci: lint"
+        - "ci/circleci: test-2.9"
+        - "ci/circleci: test-2.10"
       # Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
       enforce_admins: true
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
