--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ stages:
 
 jobs:
   include:
-    - stage: files
-      name: "Skeleton repo file sync"
-      script: bash sync_skeleton.sh
+    #- stage: files
+    #  name: "Skeleton repo file sync"
+    #  script: bash sync_skeleton.sh
     - stage: versions
       name: "prometheus"
       script: bash autocommiter.sh
