Fix up SRC/DST handling.
Use command line param for source and destination repo in
autocommiter.sh.

Signed-off-by: Ben Kochie <superq@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,7 @@ commands:
     steps:
       - run:
           name: Autocommitting
-          command: |
-            export SRC=<< parameters.source_repo >> \
-            export DST=<< parameters.dest_repo >> \
-            bash autocommiter.sh
+          command: bash autocommiter.sh "<< parameters.source_repo >>" "<< parameters.dest_repo >>"
 
 jobs:
   autocommit:
