Use GH_TOKEN from relesae context
Rename env var to re-use context.

Signed-off-by: Ben Kochie <superq@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,12 +53,14 @@ workflows:
   update:
     jobs:
     - autocommit:
+        context: release
         filters:
           branches:
             only: master
   daily:
     jobs:
-    - autocommit
+    - autocommit:
+        context: release
     triggers:
      - schedule:
          cron: "22 14 * * *"
