Don't fail when PR is in progress
If the branch exists on the remote, don't fail the pipeline.
* Include name of destination in CI tasks.

Signed-off-by: Ben Kochie <superq@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
         type: string
     steps:
       - run:
-          name: Autocommitting
+          name: "Autocommitting << parameters.dest_repo >>"
           command: bash autocommiter.sh "<< parameters.source_repo >>" "<< parameters.dest_repo >>"
 
 jobs:
