Add node_exporter to sync list
I can't believe we missed this.

Signed-off-by: Ben Kochie <superq@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
         source_repo: prometheus/mysqld_exporter
         dest_repo: cloudalchemy/ansible-mysqld-exporter
     - autocommit:
+        source_repo: prometheus/node_exporter
+        dest_repo: cloudalchemy/ansible-node-exporter
+    - autocommit:
         source_repo: prometheus/pushgateway
         dest_repo: cloudalchemy/ansible-pushgateway
     - autocommit:
