--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -104,8 +104,14 @@ branches:
         contexts:
         # - "WIP"
         - "ci/circleci: lint"
-        - "ci/circleci: test-2.9"
-        - "ci/circleci: test-2.10"
+        - "ci/circleci: test-2.9-default"
+        - "ci/circleci: test-2.9-alternative"
+        - "ci/circleci: test-2.10-default"
+        - "ci/circleci: test-2.10-alternative"
+        - "ci/circleci: test-4.10-default"
+        - "ci/circleci: test-4.10-alternative"
+        - "ci/circleci: test-5.1-default"
+        - "ci/circleci: test-5.1-alternative"
       # Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
       enforce_admins: true
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
